fix: Ajustando configurações de CORS para ter possibilidade de realizar as requisições vindas do navegador